package com.mycompany.app;

public class Main {
    public static void main(String[] args) {
        RandomLists result = new RandomLists();
        result.fillList(20);
        result.printSortedListByQuickSort();
    }
}
