package org.project.entity;

import java.io.Serializable;

abstract class AbstractEntity<E extends Serializable> implements Identifiable<E> {
}
